# paper-spells

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md.resolved  package.json  pnpm-lock.yaml
.github/workflows/: deploy-backend.yml
apps/api-server/: .env.example  .workerignore  .wranglerignore  Dockerfile  database.py  main.py  models.py  paper_spells.db  provider.py  pyproject.toml  repository.py  requirements.txt  schema.sql  wrangler.toml
apps/api-server/app/: __init__.py  config.py  main.py  schemas.py
apps/api-server/app/auth/: __init__.py  jwt.py
apps/api-server/app/core/: config.py
apps/api-server/app/db/: __init__.py  engine.py  models.py  repository.py
apps/api-server/app/interfaces/: http_client.py  storage.py
apps/api-server/app/providers/: __init__.py  base.py  gcp_auth.py  mock.py  veo.py
apps/api-server/python_modules/boto3-1.43.6.dist-info/: RECORD
apps/api-server/python_modules/botocore-1.43.6.dist-info/: RECORD
apps/api-server/python_modules/fastapi-0.99.1.dist-info/: RECORD
apps/api-server/python_modules/httpx-0.28.1.dist-info/: RECORD
apps/api-server/python_modules/jmespath-1.1.0.dist-info/: RECORD
apps/api-server/python_modules/pydantic-1.10.26.dist-info/: RECORD
apps/api-server/scripts/: check_genai.py  check_r2.py  list_models.py  test_models.py
apps/api-server/tests/: __init__.py  test_api.py
apps/gallery-web/: .env.production  index.html  package.json  vite.config.ts  wrangler.toml
apps/upload-web/: .env.production  index.html  package.json  vite.config.ts  wrangler.toml
(+24 files in other folders)
