[project]
name = "api-server"
version = "0.1.0"
description = "Paper Spells API Server for Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi<0.100.0",
    "httpx>=0.28.1",
    "pydantic<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
